fixed start-menu out of view

--- a/src/components/startInfo/StartInfo.module.css
+++ b/src/components/startInfo/StartInfo.module.css
@@ -17,6 +17,11 @@
     padding: 15px;
 }
 
+.heading {
+    margin-top: 0rem;
+    margin-bottom: 0rem;
+}
+
 .paragraph {
     font-size: 0.5rem;
     line-height: 1rem;
@@ -25,6 +30,8 @@
 
 .colors {
     line-height: 0.5rem;
+    margin: 0.1rem;
+    font-size: 100%;
 }
 
 .toggleButton {
@@ -34,7 +41,7 @@
     color: white;
     font-weight: 700;
     font-size: 20px;
-    margin: 1rem 0;
+    margin: 0.3rem 0;
     border-radius: 15px;
 }
 
